# rap-package-template

./: .gitignore  README.md  config.toml  environment.yml  package_exercises.md  pyproject.toml  requirements.txt  setup.py
my_R_project/: _targets.R  _targets.yaml  _targets_test.R  create_report.R  report_styles.css  report_template.qmd
my_R_project/_targets/: .gitignore
my_R_project/_targets/meta/: meta  process  progress
my_R_project/_targets/objects/: ae_attendance_raw_data  ae_attendance_type1_data  trust_ods_codes_interim_data  trust_ods_codes_raw_data
my_R_project/data/interim/: README.md
my_R_project/pipeline/: README.md
my_R_project/utilities/: add_metric_col_percent.R  case_names.R  create_directory.R  dplyr_format_date.R  dplyr_format_num.R  dplyr_group_by.R  ggplot_line_chart.R  knitr_markdown_table.R  plotly_line_chart_minmax.R  source_folder.R  write_to_csv.R
my_project/: create_publication.py  report_template.qmd
my_project/utilities/: add_data_time_col.R  data_connections.py  dplyr_filter_cols.R  get_nhsr_dataset.R  plotly_line_chart.R  plotly_line_chart_minmax_dropdown.R
my_py_ project/: params.py
my_py_ project/utilities/: field_definitions.py  processing_steps.py
sql/: example.sql
src/data_exports/: write_excel.py
src/processing/: derive_fields.py
src/utils/: data_connections.py
templates/: publication_template.xlsx
tests/backtests/: README.md  backtesting_params.py  test_compare_outputs.py
tests/unittests/: test_data_connections.py  test_field_definitions.py  test_processing.py  test_processing_steps.py  testthat.R
(+27 files in other folders)
